<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:fillViewport="true"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/download"
            tools:ignore="ContentDescription"/>

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/phone_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/address_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/profession_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/profession"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/confirmpassword_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHighlight="#000000"
            android:textStyle="normal"/>


        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:background="#0000a0"
            android:text="@string/Signup"
            android:textColor="#ffffff"/>
    </LinearLayout>


</ScrollView>

